datafusion/datafusion-cli/tests/snapshots/cli_quick_test@change_format_version.snap
---
source: datafusion-cli/tests/cli_integration.rs
info:
  program: datafusion-cli
  args:
    - "--file"
    - tests/sql/types_format.sql
    - "-q"
---
success: true
exit_code: 0
----- stdout -----
+-----------+
| Int64(54) |
| Int64     |
+-----------+
| 54        |
+-----------+

----- stderr -----
