datafusion/datafusion-cli/tests/snapshots/cli_quick_test@files.snap
---
source: datafusion-cli/tests/cli_integration.rs
info:
  program: datafusion-cli
  args:
    - "--file"
    - tests/sql/select.sql
    - "-q"
---
success: true
exit_code: 0
----- stdout -----
+----------+
| Int64(1) |
+----------+
| 1        |
+----------+

----- stderr -----
